--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "polisee.net",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "node scripts/deploy.js",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,6 +22,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "gh-pages": "^4.0.0",
     "sass": "^1.54.9",
     "vite": "^3.1.0"
   }
